--- a/HoroscopeLab-Unit4/Base.lproj/Main.storyboard
+++ b/HoroscopeLab-Unit4/Base.lproj/Main.storyboard
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="M0d-5P-fjp">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,11 +11,11 @@
             <objects>
                 <viewController id="M0d-5P-fjp" customClass="HoroscopePickerVC" customModule="HoroscopeLab_Unit4" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Zgp-9u-MXf">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9FA-ZD-ckJ">
-                                <rect key="frame" x="20" y="78" width="374" height="30"/>
+                                <rect key="frame" x="20" y="34" width="560" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="t3o-VT-swH"/>
                                 </constraints>
@@ -25,7 +24,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ruN-gk-YS8">
-                                <rect key="frame" x="20" y="181" width="374" height="34"/>
+                                <rect key="frame" x="20" y="137" width="560" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="KGh-mT-XcB"/>
                                 </constraints>
@@ -33,7 +32,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EGv-pT-012">
-                                <rect key="frame" x="20" y="116" width="374" height="31"/>
+                                <rect key="frame" x="20" y="72" width="560" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="W1B-cw-ctX"/>
                                 </constraints>
@@ -42,10 +41,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u3o-hK-fia">
-                                <rect key="frame" x="0.0" y="223" width="414" height="387"/>
+                                <rect key="frame" x="0.0" y="179" width="600" height="169"/>
                             </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qVP-H4-kcZ">
-                                <rect key="frame" x="20" y="618" width="374" height="30"/>
+                                <rect key="frame" x="20" y="356" width="560" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="akJ-b2-619"/>
                                 </constraints>
@@ -55,13 +54,13 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bes-pc-Rkw">
-                                <rect key="frame" x="20" y="656" width="374" height="30"/>
+                                <rect key="frame" x="20" y="394" width="560" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="AFc-ZG-wvW"/>
                                 </constraints>
                                 <state key="normal" title="Horoscope"/>
                                 <connections>
-                                    <action selector="horoscopeButton:" destination="M0d-5P-fjp" eventType="touchUpInside" id="RmW-1Z-kBJ"/>
+                                    <action selector="horoscopeButtonSegue:" destination="M0d-5P-fjp" eventType="touchUpInside" id="RmW-1Z-kBJ"/>
                                     <segue destination="H3Z-bq-tu2" kind="show" identifier="Segue" id="e9q-Sy-eax"/>
                                 </connections>
                             </button>
@@ -107,11 +106,11 @@
             <objects>
                 <viewController id="H3Z-bq-tu2" customClass="HoroscopeDetailVC" customModule="HoroscopeLab_Unit4" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dk8-qg-etj">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ne-2X-H6m">
-                                <rect key="frame" x="20" y="44" width="374" height="70"/>
+                                <rect key="frame" x="20" y="44" width="560" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="Eho-rv-Wdf"/>
                                 </constraints>
@@ -120,7 +119,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="8Ex-Ia-yOV">
-                                <rect key="frame" x="20" y="122" width="374" height="686"/>
+                                <rect key="frame" x="20" y="122" width="560" height="458"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
