--- a/HoroscopeLab-Unit4/Base.lproj/Main.storyboard
+++ b/HoroscopeLab-Unit4/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Horoscope PickerVC-->
+        <!--Home ScreenVC-->
         <scene sceneID="L7d-zd-Ug9">
             <objects>
-                <viewController id="M0d-5P-fjp" customClass="HoroscopePickerVC" customModule="HoroscopeLab_Unit4" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="M0d-5P-fjp" customClass="HomeScreenVC" customModule="HoroscopeLab_Unit4" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Zgp-9u-MXf">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
